
- modeline enhanced
  when a path/to/my/favoured/Python is given with `py-shell-name'
  the Python-shell buffer before would display

  *ND path/to/my/favoured/Python* 

  now:

  *ptmfP Python*

  boolean `py-modeline-display-full-path-p' 
  boolean `py-modeline-acronym-display-home-p'  
  If the modeline acronym should contain chars indicating the home-directory.

- Pymacs intergration dropped from trunk
  conflicts with classic install being reported

New in version 6.0.8

--------------------

- `py-pep8-run', new command checking formatting
   `py-pep8-help'

- `py-pyflake-run', new command 
   Pyflakes is a simple program which checks Python
   source files for errors. - It is similar to
   PyChecker in scope, but differs in - that it does
   not execute the modules to check them.
   `py-pyflake-help'

- `py-pylint-run', new command calls Pylint, 
  a Python source code analyzer which looks for
  programming errors, helps enforcing a coding standard
  and sniffs for some code smells (as defined in Martin
  Fowler's Refactoring book) . 

  Pylint checks length of lines of code, if variable
  names are well-formed according to your coding
  standard, if declared interfaces are truly
  implemented, and much more. Additionally, it is
  possible to write plugins.
  `py-pylint-doku', `py-pylint-help'

- py-pyflakespep8-run, combines calls to pyflakes and pep8
  
- respective flymake-modes,
  `pyflakespep8-flymake-mode', `pylint-flymake-mode'
  etc. See meny PyTools

New in version 6.0.7
--------------------

- make every Python shell acces its own history-file
  .python3_history
  .python_history
  .ipython_history etc.

- related to shell used
  `toggle-force-py-shell-name-p'
  `force-py-shell-name-p-on'/off

  making it easier to enforce default py-shell upon execution

  `toggle-force-local-shell'
  `py-force-local-shell-on'/off

  If locally indicated Python shell should be taken and
  enforced upon sessions execute commands, lp:988091

- specific completion: